--- a/history.html
+++ b/history.html
@@ -16,8 +16,9 @@
             <h2>My DICTIONARY App History</h2>
             <button id="search2nd" class="btn btn-dark" onclick="homePage()">Home</button>
             <br>
-            <input type="text" id="forsearch" >
-            <button id="search3rd" class="btn btn-dark" onclick="homePage()">Search</button>
+            <input type="text" id="forsearch" placeholder="Search">
+            <button id="search3rd" class="btn btn-dark mx-2" onclick="homePage()">Search</button>
+            <button id="clearhistory" class="btn btn-dark" onclick="clearHistory()">clear history</button>
         </div>
         <section>
             <div id="card-container"></div>
