--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <form id="inputForm">
                 <label for="user_input">Search for new word</label>
                 <br>
-                <input type="text" name="search" id="user_input">
+                <input type="text" name="search" id="user_input" placeholder="Write new word">
                 <button class="btn btn-light btn-circle btn-xl" id="searching" >
                     <img id="search" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgJ9oZgHZCCYzIcH5mS83DR5TsL2fVwJIPQg&usqp=CAU" alt="search btn">
                 </button>
