--- a/history.html
+++ b/history.html
@@ -17,8 +17,9 @@
             <button id="search2nd" class="btn btn-dark" onclick="homePage()">Home</button>
             <br>
             <input type="text" id="forsearch" placeholder="Search">
-            <button id="search3rd" class="btn btn-dark mx-2" onclick="homePage()">Search</button>
-            <button id="clearhistory" class="btn btn-dark" onclick="clearHistory()">clear history</button>
+            <button id="search3rd" class="btn btn-dark mx-2" onclick="homePage()">Search New word</button>
+            
+            
         </div>
         <section>
             <div id="card-container"></div>
