--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>Document</title>
+    <title>My Dictionary</title>
 </head>
 <body>
     
-    
+    <!-- <nav class="navbar">
+        <li>home</li>
+        <li>About</li>
+        <li>profile</li>
+    </nav> -->
     <main>
         <header>
             <h1>My Dictionary</h1>
@@ -22,12 +26,14 @@
         </section>
         <section class="second">
             <form id="inputForm">
-                <label for="user_input">Search for new word</label>
+                <label for="user_inputlable">Search for new word</label>
                 <br>
+                <div id="inputDiv">
                 <input type="text" name="search" id="user_input" placeholder="Write new word">
                 <button class="btn btn-light btn-circle btn-xl" id="searching" >
                     <img id="search" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgJ9oZgHZCCYzIcH5mS83DR5TsL2fVwJIPQg&usqp=CAU" alt="search btn">
                 </button>
+                </div>
             </form>
         </section>
         <section>
